Minor but fix: text not aligned properly

--- a/public/css/tictactoe.css
+++ b/public/css/tictactoe.css
@@ -18,7 +18,6 @@ body {
   padding: 20px;
   border-radius: 1rem;
   border: 3px solid #4e4e4e;
-  height: 600px;
 }
 
 h1 {
